[package]
name = "voxelhammer_nativerust"
version = "0.1.0"
authors = ["Daniel Herkert <daniel.herkert@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
gdnative = "0.9.3"
itertools = "0.10.1"
